--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,16 @@ status.txt
 tags
 test.ArduCopter/*
 Thumbs.db
+
+*.aps
+*.rc
+*.sdf
+*.sln
+*.suo
+*.vcxproj
+*.filters
+*.user
+*.ino
+ArduCopter/Visual Micro/
+Ardupilot/
+ArduCopter/resource.h
